minecraft/amber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amber
  namespace: minecraft
  labels:
    app: minecraft
    world: amber
spec:
  ports:
    - name: server
      port: 25565
    - name: rcon
      port: 25575
    - name: map
      port: 8100
  selector:
    app: minecraft
    world: amber
