minecraft/amber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-amber
  namespace: minecraft
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: minecraft-amber.ttys0.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amber
                port:
                  number: 8123
  tls:
    - hosts:
        - minecraft-amber.ttys0.net
      secretName: minecraft-amber-ttys0-net-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-amber-ext
  namespace: minecraft
spec:
  ingressClassName: "nginx-external"
  rules:
    - host: minecraft-amber.ttys0.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amber
                port:
                  number: 8123
  tls:
    - hosts:
        - minecraft-amber.ttys0.net
      secretName: minecraft-amber-ttys0-net-cert
